<resources>
    <string name="app_name">GameHelper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="iet_login">Input Login</string>
    <string name="iet_password">Input Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_sign_up">Sign_Up</string>
    <string name="iet_mail">Input Mail</string>
    <string name="btn_anketa">Анкета</string>
    <string name="btn_match_stories">Истрория матчей</string>
    <string name="btn_template">Шаблоны</string>
    <string name="btn_create_match">Создать матч</string>
    <string name="add_new_template">Add new Template</string>
    <string name="tv_enter_game_name">Введите название игры</string>
    <string name="tv_enter_count_players">Введите количество игроков</string>
    <string name="tv_dice">Кубик</string>
    <string name="tv_timer">Таймер</string>
    <string name="tv_liners">Ползунки</string>
    <string name="tv_table">Таблица</string>
    <string name="btn_create_tamplate">Создать шаблон</string>
    <string name="tv_network_error">Network_error</string>
    <string name="tv_create_or_choose">Создать новую игру\nили\nвыбрать из шаблонов?</string>
    <string name="btn_create">Создать</string>
    <string name="btn_templates">Шаблоны</string>
    <string name="btn_end_game">Завершить игру</string>
    <string name="btn_dice">Кубик</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_timer">Таймер</string>
    <string name="tv_game_count">Число сыгранных игр:</string>
    <string name="tv_avg_time">Среднее время игр:</string>
    <string name="tv_best_score">Топ очков игр:</string>
    <string name="tv_fastest_game">Самая быстра партия игр:</string>
    <string name="tv_slowliest_game">Самая долгая партия игр:</string>
    <string name="btn_list_of_matches">Список Матчей</string>
    <string name="btn_test">Test</string>
    <string name="tv_input_players">Введите имена игроков через запятую</string>
    <string name="game_save_or_not">Сохранить матч?</string>
    <string name="yes">Да</string>
    <string name="No">Нет</string>
    <string name="roll_dice">Бросить кубик</string>
    <string name="input_match_name">Введите название матча</string>
    <string name="save_match">Сохранить матч</string>
    <string name="choose_saves">Сохранить результаты из таблицы или из ползунков</string>
    <string name="match_winner">Введите имя победителя</string>
</resources>