<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400sp"
    android:layout_height="wrap_content"
    android:background="@color/firstColor"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/input_match_name"
        android:textColorHint="@color/thirdColor"
        app:hintTextColor="@color/thirdColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ietMatchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondColor"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="3"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@color/thirdColor" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/match_winner"
        android:textColorHint="@color/thirdColor"
        app:hintTextColor="@color/thirdColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ietWinnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondColor"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="1"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@color/thirdColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swLinersOrTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:minHeight="48dp"
        android:text="@string/choose_saves"
        android:textColor="@color/thirdColor" />

    <Button
        android:id="@+id/btnSaveMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginBottom="6sp"
        android:backgroundTint="@color/secondColor"
        android:text="@string/save_match"
        android:textColor="@color/thirdColor" />



</LinearLayout>